--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,13 @@
     <string name="share">Share</string>
     <string name="recipe_image">recipe_image</string>
     <string name="okey">Okey</string>
+    <string name="title">Title</string>
+    <string name="textview">TextView</string>
+    <string name="_100">100</string>
+    <string name="original">Original</string>
+    <string name="consistency">Consistency</string>
+    <string name="grams">Grams</string>
+    <string name="name">Name</string>
+    <string name="error">Error</string>
 
 </resources>
